--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "author": "Sharaaf Nazeer",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "axios": "^1.4.0",
+    "color-name": "^2.0.0",
     "merge-img": "^2.1.3",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "validator": "^13.9.0"
   }
 }
